# superfinder

./: .env  .gitignore  .tool-versions  Cargo.toml
migrations/: 20220205194830_create_paths.up.sql  20220205194830_create_user.down.sql
src/: lib.rs  main.rs
src/cli/: add.rs  find.rs  parser.rs  test_db.rs
src/db/: sqlite.rs
src/scripts/: init_db.sh  super_finder.sh
src/scripts/migrations/: new  run
